Fix NER metric example

--- a/notebooks/Overview.ipynb
+++ b/notebooks/Overview.ipynb
@@ -3326,10 +3326,11 @@
         "colab": {}
       },
       "source": [
+        "!pip install seqeval\n",
         "ner_metric = load_metric('seqeval')\n",
         "references = [['O', 'O', 'O', 'B-MISC', 'I-MISC', 'I-MISC', 'O'], ['B-PER', 'I-PER', 'O']]\n",
         "predictions =  [['O', 'O', 'B-MISC', 'I-MISC', 'I-MISC', 'I-MISC', 'O'], ['B-PER', 'I-PER', 'O']]\n",
-        "ner_metric.compute(predictions, references)"
+        "ner_metric.compute(predictions=predictions, references=references)"
       ],
       "execution_count": null,
       "outputs": []
