--- a/notebooks/Overview.ipynb
+++ b/notebooks/Overview.ipynb
@@ -1338,7 +1338,7 @@
         "      Arrow table are arbitrarily long tables, typed with types that can be mapped to numpy/pandas/python standard types and can store nested objects. They can be directly access from drive, loaded in RAM or even streamed over the web.\n",
         "    \n",
         "\n",
-        "3. Return a **dataset build from the splits** asked by the user (default: all), in the above example we create a dataset with the first 10% of the validation split."
+        "3. Return a **dataset built from the splits** asked by the user (default: all); in the above example we create a dataset with the first 10% of the validation split."
       ]
     },
     {
