Convert docs to mdx

--- a/docs/source/quickstart.mdx
+++ b/docs/source/quickstart.mdx
@@ -1,31 +1,28 @@
-Quick Start
-===========
+# Quick Start
 
-The quick start is intended for developers who are ready to dive in to the code, and see an end-to-end example of how they can integrate 🤗 Datasets into their model training workflow. For beginners who are looking for a gentler introduction, we recommend you begin with the :doc:`tutorials <./tutorial>`.
+The quick start is intended for developers who are ready to dive in to the code, and see an end-to-end example of how they can integrate 🤗 Datasets into their model training workflow. For beginners who are looking for a gentler introduction, we recommend you begin with the [tutorials](./tutorial).
 
-In the quick start, you will walkthrough all the steps to fine-tune `BERT <https://huggingface.co/bert-base-cased>`_ on a paraphrase classification task. Depending on the specific dataset you use, these steps may vary, but the general steps of how to load a dataset and process it are the same.
+In the quick start, you will walkthrough all the steps to fine-tune [BERT](https://huggingface.co/bert-base-cased) on a paraphrase classification task. Depending on the specific dataset you use, these steps may vary, but the general steps of how to load a dataset and process it are the same.
 
-.. tip::
-
-   For more detailed information on loading and processing a dataset, take a look at `Chapter 3 <https://huggingface.co/course/chapter3/1?fw=pt>`_ of the Hugging Face course! It covers additional important topics like dynamic padding, and fine-tuning with the Trainer API. 
+tip,None
+For more detailed information on loading and processing a dataset, take a look at [Chapter 3](https://huggingface.co/course/chapter3/1?fw=pt) of the Hugging Face course! It covers additional important topics like dynamic padding, and fine-tuning with the Trainer API.
 
 Get started by installing 🤗 Datasets:
 
-.. code::
+```
+pip install datasets
+```
 
-   pip install datasets
+## Load the dataset and model
 
-Load the dataset and model
---------------------------
+Begin by loading the [Microsoft Research Paraphrase Corpus (MRPC)](https://huggingface.co/datasets/viewer/?dataset=glue&config=mrpc) training dataset from the [General Language Understanding Evaluation (GLUE) benchmark](https://huggingface.co/datasets/glue). MRPC is a corpus of human annotated sentence pairs used to train a model to determine whether sentence pairs are semantically equivalent.
 
-Begin by loading the `Microsoft Research Paraphrase Corpus (MRPC) <https://huggingface.co/datasets/viewer/?dataset=glue&config=mrpc>`_ training dataset from the `General Language Understanding Evaluation (GLUE) benchmark <https://huggingface.co/datasets/glue>`_. MRPC is a corpus of human annotated sentence pairs used to train a model to determine whether sentence pairs are semantically equivalent.
+```
+>>> from datasets import load_dataset
+>>> dataset = load_dataset('glue', 'mrpc', split='train')
+```
 
-.. code-block::
-
-   >>> from datasets import load_dataset
-   >>> dataset = load_dataset('glue', 'mrpc', split='train')
-
-Next, import the pre-trained BERT model and its tokenizer from the `🤗 Transformers <https://huggingface.co/transformers/>`_ library:
+Next, import the pre-trained BERT model and its tokenizer from the [🤗 Transformers](https://huggingface.co/transformers/) library:
 
 ```py
 >>> from transformers import AutoModelForSequenceClassification, AutoTokenizer
@@ -47,43 +44,41 @@ You should probably TRAIN this model on a down-stream task to be able to use it 
 >>> tokenizer = AutoTokenizer.from_pretrained('bert-base-cased')
 ```
 
-Tokenize the dataset
---------------------
+## Tokenize the dataset
 
-The next step is to tokenize the text in order to build sequences of integers the model can understand. Encode the entire dataset with :func:`datasets.Dataset.map`, and truncate and pad the inputs to the maximum length of the model. This ensures the appropriate tensor batches are built.
+The next step is to tokenize the text in order to build sequences of integers the model can understand. Encode the entire dataset with [`datasets.Dataset.map`], and truncate and pad the inputs to the maximum length of the model. This ensures the appropriate tensor batches are built.
 
-.. code-block::
+```
+>>> def encode(examples):
+...     return tokenizer(examples['sentence1'], examples['sentence2'], truncation=True, padding='max_length')
 
-   >>> def encode(examples):
-   ...     return tokenizer(examples['sentence1'], examples['sentence2'], truncation=True, padding='max_length')
-   
-   >>> dataset = dataset.map(encode, batched=True)
-   >>> dataset[0]
-   {'sentence1': 'Amrozi accused his brother , whom he called " the witness " , of deliberately distorting his evidence .',
-   'sentence2': 'Referring to him as only " the witness " , Amrozi accused his brother of deliberately distorting his evidence .',
-   'label': 1,
-   'idx': 0,
-   'input_ids': array([  101,  7277,  2180,  5303,  4806,  1117,  1711,   117,  2292, 1119,  1270,   107,  1103,  7737,   107,   117,  1104,  9938, 4267, 12223, 21811,  1117,  2554,   119,   102, 11336,  6732, 3384,  1106,  1140,  1112,  1178,   107,  1103,  7737,   107, 117,  7277,  2180,  5303,  4806,  1117,  1711,  1104,  9938, 4267, 12223, 21811,  1117,  2554,   119,   102]),
-   'token_type_ids': array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]),
-   'attention_mask': array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])}
+>>> dataset = dataset.map(encode, batched=True)
+>>> dataset[0]
+{'sentence1': 'Amrozi accused his brother , whom he called " the witness " , of deliberately distorting his evidence .',
+'sentence2': 'Referring to him as only " the witness " , Amrozi accused his brother of deliberately distorting his evidence .',
+'label': 1,
+'idx': 0,
+'input_ids': array([  101,  7277,  2180,  5303,  4806,  1117,  1711,   117,  2292, 1119,  1270,   107,  1103,  7737,   107,   117,  1104,  9938, 4267, 12223, 21811,  1117,  2554,   119,   102, 11336,  6732, 3384,  1106,  1140,  1112,  1178,   107,  1103,  7737,   107, 117,  7277,  2180,  5303,  4806,  1117,  1711,  1104,  9938, 4267, 12223, 21811,  1117,  2554,   119,   102]),
+'token_type_ids': array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]),
+'attention_mask': array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])}
+```
 
-Notice how there are three new columns in the dataset: ``input_ids``, ``token_type_ids``, and ``attention_mask``. These columns are the inputs to the model.
+Notice how there are three new columns in the dataset: `input_ids`, `token_type_ids`, and `attention_mask`. These columns are the inputs to the model.
 
-Format the dataset
-------------------
+## Format the dataset
 
 Depending on whether you are using PyTorch, TensorFlow, or JAX, you will need to format the dataset accordingly. There are three changes you need to make to the dataset:
 
-1. Rename the ``label`` column to ``labels``, the expected input name in `BertForSequenceClassification <https://huggingface.co/transformers/model_doc/bert.html#transformers.BertForSequenceClassification.forward>`__ or `TFBertForSequenceClassification <https://huggingface.co/transformers/model_doc/bert.html#tfbertforsequenceclassification>`__:
-   
-.. code::
+1. Rename the `label` column to `labels`, the expected input name in [BertForSequenceClassification](https://huggingface.co/transformers/model_doc/bert#transformers.BertForSequenceClassification.forward) or [TFBertForSequenceClassification](https://huggingface.co/transformers/model_doc/bert#tfbertforsequenceclassification):
 
-   >>> dataset = dataset.map(lambda examples: {'labels': examples['label']}, batched=True)
+```
+>>> dataset = dataset.map(lambda examples: {'labels': examples['label']}, batched=True)
+```
 
 2. Retrieve the actual tensors from the Dataset object instead of using the current Python objects.
-3. Filter the dataset to only return the model inputs: ``input_ids``, ``token_type_ids``, and ``attention_mask``.
-   
-:func:`datasets.Dataset.set_format` completes the last two steps on-the-fly. After you set the format, wrap the dataset in ``torch.utils.data.DataLoader`` or ``tf.data.Dataset``:
+3. Filter the dataset to only return the model inputs: `input_ids`, `token_type_ids`, and `attention_mask`.
+
+[`datasets.Dataset.set_format`] completes the last two steps on-the-fly. After you set the format, wrap the dataset in `torch.utils.data.DataLoader` or `tf.data.Dataset`:
 
 
 ```py
@@ -145,8 +140,7 @@ array([1, 0, 1, 0, 1, 1, 0, 1, 0, 0, 0, 0, 1, 1, 0, 0, 0, 1, 0, 1, 1, 1,
    0, 1, 1, 1, 0, 0, 1, 1, 1, 0])>)
 ```
 
-Train the model
----------------
+## Train the model
 
 Lastly, create a simple training loop and start training:
 
@@ -172,9 +166,8 @@ Lastly, create a simple training loop and start training:
 >>> model.fit(tfdataset, epochs=3)
 ```
 
-What's next?
-------------
+## What's next?
 
 This completes the basic steps of loading a dataset to train a model. You loaded and processed the MRPC dataset to fine-tune BERT to determine whether sentence pairs have the same meaning.
 
-For your next steps, take a look at our :doc:`How-to guides <./how_to>` and learn how to achieve a specific task (e.g. load a dataset offline, add a dataset to the Hub, change the name of a column). Or if you want to deepen your knowledge of 🤗 Datasets core concepts, read our :doc:`Conceptual Guides <./about_arrow>`.
+For your next steps, take a look at our [How-to guides](./how_to) and learn how to achieve a specific task (e.g. load a dataset offline, add a dataset to the Hub, change the name of a column). Or if you want to deepen your knowledge of 🤗 Datasets core concepts, read our [Conceptual Guides](./about_arrow).
