--- a/docs/source/beam.mdx
+++ b/docs/source/beam.mdx
@@ -39,5 +39,8 @@ datasets-cli run_beam datasets/$DATASET_NAME \
 "region=$REGION,requirements_file=/tmp/beam_requirements.txt"
 ```
 
-tip,None
+<Tip>
+
 When you run your pipeline, you can adjust the parameters to change the runner (Flink or Spark), output location (S3 bucket or HDFS), and the number of workers.
+
+</Tip>
