--- a/docs/source/quickstart.mdx
+++ b/docs/source/quickstart.mdx
@@ -4,8 +4,11 @@ The quick start is intended for developers who are ready to dive in to the code,
 
 In the quick start, you will walkthrough all the steps to fine-tune [BERT](https://huggingface.co/bert-base-cased) on a paraphrase classification task. Depending on the specific dataset you use, these steps may vary, but the general steps of how to load a dataset and process it are the same.
 
-tip,None
+<Tip>
+
 For more detailed information on loading and processing a dataset, take a look at [Chapter 3](https://huggingface.co/course/chapter3/1?fw=pt) of the Hugging Face course! It covers additional important topics like dynamic padding, and fine-tuning with the Trainer API.
+
+</Tip>
 
 Get started by installing 🤗 Datasets:
 
