--- a/docs/source/index.mdx
+++ b/docs/source/index.mdx
@@ -8,97 +8,21 @@ Load a dataset in a single line of code, and use our powerful data processing me
 
 Find your dataset today on the [Hugging Face Hub](https://huggingface.co/datasets), or take an in-depth look inside a dataset with the live [Datasets Viewer](https://huggingface.co/datasets/viewer/).
 
-panels,None
-:card: shadow
-
-.. link-button:: tutorial
-:type: ref
-:text: Tutorials
-:classes: btn-primary btn-block
-
-^^^
-Learn the basics and become familiar with loading, accessing, and processing a dataset. Start here if you are using 🤗 Datasets for the first time!
-
----
-.. link-button:: how_to
-:type: ref
-:text: How-to guides
-:classes: btn-primary btn-block
-
-^^^
-Practical guides to help you achieve a specific goal. Take a look at these guides to learn how to use 🤗 Datasets to solve real-world problems.
-
----
-.. link-button:: about_arrow
-:type: ref
-:text: Conceptual guides
-:classes: btn-primary btn-block
-
-^^^
-High-level explanations for building a better understanding about important topics such as the underlying data format, the cache, and how datasets are generated.
----
-.. link-button:: package_reference/main_classes
-:type: ref
-:text: Reference
-:classes: btn-primary btn-block
-
-^^^
-Technical descriptions of how 🤗 Datasets classes and methods work.
-
-toctree,None
-:hidden:
-
-quickstart
-
-toctree,None
-:hidden:
-:caption: Tutorials
-
-tutorial
-installation
-load_hub
-access
-use_dataset
-metrics
-upload_dataset
-
-toctree,None
-:hidden:
-:caption: How-to guides
-
-how_to
-loading
-process
-audio_process
-stream
-share
-dataset_script
-dataset_card
-repository_structure
-cache
-filesystems
-faiss_es
-how_to_metrics
-beam
-
-toctree,None
-:hidden:
-:caption: Conceptual guides
-
-about_arrow
-about_cache
-about_dataset_features
-about_dataset_load
-about_map_batch
-about_metrics
-
-toctree,None
-:hidden:
-:caption: Reference
-
-package_reference/main_classes
-package_reference/builder_classes
-package_reference/loading_methods
-package_reference/table_classes
-package_reference/logging_methods
-package_reference/task_templates
+<div class="w-full grid grid-cols-2 gap-y-2 gap-x-5 px-5">
+  <a class="border p-2 rounded-lg shadow hover:shadow-lg" href="/docs/datasets/tutorial">
+    <p class="w-full text-center bg-blue-500 rounded text-white text-lg">Tutorials</p>
+    <p>Learn the basics and become familiar with loading, accessing, and processing a dataset. Start here if you are using 🤗 Datasets for the first time!</p>
+  </a>
+  <a class="border p-2 rounded-lg shadow hover:shadow-lg" href="/docs/datasets/how_to">
+    <p class="w-full text-center bg-blue-500 rounded text-white text-lg">How-to guides</p>
+    <p>Practical guides to help you achieve a specific goal. Take a look at these guides to learn how to use 🤗 Datasets to solve real-world problems.</p>
+  </a>
+  <a class="border p-2 rounded-lg shadow hover:shadow-lg" href="/docs/datasets/about_arrow">
+    <p class="w-full text-center bg-blue-500 rounded text-white text-lg">Conceptual guides</p>
+    <p>High-level explanations for building a better understanding about important topics such as the underlying data format, the cache, and how datasets are generated.</p>
+  </a>
+  <a class="border p-2 rounded-lg shadow hover:shadow-lg" href="/docs/datasets/package_reference/main_classes">
+    <p class="w-full text-center bg-blue-500 rounded text-white text-lg">Reference</p>
+    <p>Technical descriptions of how 🤗 Datasets classes and methods work.</p>
+  </a>
+</div>
