--- a/docs/source/loading.mdx
+++ b/docs/source/loading.mdx
@@ -20,7 +20,7 @@ In the tutorial, you learned how to load a dataset from the Hub. This method rel
 
 First, create a dataset repository and upload your data files. Then you can use [`datasets.load_dataset`] like you learned in the tutorial. For example, load the files from this [demo repository](https://huggingface.co/datasets/lhoestq/demo1) by providing the repository namespace and dataset name:
 
-```
+```py
 >>> from datasets import load_dataset
 >>> dataset = load_dataset('lhoestq/demo1')
 ```
@@ -29,7 +29,7 @@ This dataset repository contains CSV files, and this code loads all the data fro
 
 Some datasets may have more than one version, based on Git tags, branches or commits. Use the `revision` flag to specify which dataset version you want to load:
 
-```
+```py
 >>> dataset = load_dataset(
 >>>   "lhoestq/custom_squad",
 >>>   revision="main"  # tag name, or branch name, or commit hash
@@ -41,7 +41,7 @@ Refer to the [upload_dataset_repo](#upload_dataset_repo) guide for more instruct
 
 If the dataset doesn't have a dataset loading script, then by default, all the data will be loaded in the `train` split. Use the `data_files` parameter to map data files to splits like `train`, `validation` and `test`:
 
-```
+```py
 >>> data_files = {"train": "train.csv", "test": "test.csv"}
 >>> dataset = load_dataset("namespace/your_dataset_name", data_files=data_files)
 ```
@@ -51,14 +51,14 @@ If you don't specify which data files to use, `load_dataset` will return all the
 
 You can also load a specific subset of the files with the `data_files` parameter. The example below loads files from the [C4 dataset](https://huggingface.co/datasets/allenai/c4):
 
-```
+```py
 >>> from datasets import load_dataset
 >>> c4_subset = load_dataset('allenai/c4', data_files='en/c4-train.0000*-of-01024.json.gz')
 ```
 
 Specify a custom split with the `split` parameter:
 
-```
+```py
 >>> data_files = {"validation": "en/c4-validation.*.json.gz"}
 >>> c4_validation = load_dataset("allenai/c4", data_files=data_files, split="validation")
 ```
@@ -71,33 +71,33 @@ Specify a custom split with the `split` parameter:
 
 🤗 Datasets can read a dataset made up of one or several CSV files:
 
-```
+```py
 >>> from datasets import load_dataset
 >>> dataset = load_dataset('csv', data_files='my_file.csv')
 ```
 
 If you have more than one CSV file:
 
-```
+```py
 >>> dataset = load_dataset('csv', data_files=['my_file_1.csv', 'my_file_2.csv', 'my_file_3.csv'])
 ```
 
 You can also map the training and test splits to specific CSV files:
 
-```
+```py
 >>> dataset = load_dataset('csv', data_files={'train': ['my_train_file_1.csv', 'my_train_file_2.csv'] 'test': 'my_test_file.csv'})
 ```
 
 To load remote CSV files via HTTP, you can pass the URLs:
 
-```
+```py
 >>> base_url = "https://huggingface.co/datasets/lhoestq/demo1/resolve/main/data/"
 >>> dataset = load_dataset('csv', data_files={'train': base_url + 'train.csv', 'test': base_url + 'test.csv'})
 ```
 
 To load zipped CSV files:
 
-```
+```py
 >>> url = "https://domain.org/train_data.zip"
 >>> data_files = {"train": url}
 >>> dataset = load_dataset("csv", data_files=data_files)
@@ -107,21 +107,21 @@ To load zipped CSV files:
 
 JSON files are loaded directly with [`datasets.load_dataset`] as shown below:
 
-```
+```py
 >>> from datasets import load_dataset
 >>> dataset = load_dataset('json', data_files='my_file.json')
 ```
 
 JSON files can have diverse formats, but we think the most efficient format is to have multiple JSON objects; each line represents an individual row of data. For example:
 
-```
+```py
 {"a": 1, "b": 2.0, "c": "foo", "d": false}
 {"a": 4, "b": -5.5, "c": null, "d": true}
 ```
 
 Another JSON format you may encounter is a nested field, in which case you will need to specify the `field` argument as shown in the following:
 
-```
+```py
 {"version": "0.1.0",
     "data": [{"a": 1, "b": 2.0, "c": "foo", "d": false},
             {"a": 4, "b": -5.5, "c": null, "d": true}]
@@ -133,7 +133,7 @@ Another JSON format you may encounter is a nested field, in which case you will 
 
 To load remote JSON files via HTTP, you can pass the URLs:
 
-```
+```py
 >>> base_url = "https://rajpurkar.github.io/SQuAD-explorer/dataset/"
 >>> dataset = load_dataset('json', data_files={'train': base_url + 'train-v1.1.json', 'validation': base_url + 'dev-v1.1.json'}, field="data")
 ```
@@ -144,14 +144,14 @@ While these are the most common JSON formats, you will see other datasets that a
 
 Text files are one of the most common file types for storing a dataset. 🤗 Datasets will read the text file line by line to build the dataset.
 
-```
+```py
 >>> from datasets import load_dataset
 >>> dataset = load_dataset('text', data_files={'train': ['my_text_1.txt', 'my_text_2.txt'], 'test': 'my_test_file.txt'})
 ```
 
 To load remote TXT files via HTTP, you can pass the URLs:
 
-```
+```py
 >>> dataset = load_dataset('text', data_files='https://huggingface.co/datasets/lhoestq/test/resolve/main/some_text.txt')
 ```
 
@@ -159,7 +159,7 @@ To load remote TXT files via HTTP, you can pass the URLs:
 
 Parquet files are stored in a columnar format unlike row-based files like CSV. Large datasets may be stored in a Parquet file because it is more efficient, and faster at returning your query. Load a Parquet file as shown in the following example:
 
-```
+```py
 >>> from datasets import load_dataset
 >>> dataset = load_dataset("parquet", data_files={'train': 'train.parquet', 'test': 'test.parquet'})
 ```
@@ -180,7 +180,7 @@ To load remote parquet files via HTTP, you can pass the URLs:
 
 Load Python dictionaries with [`datasets.Dataset.from_dict`]:
 
-```
+```py
 >>> from datasets import Dataset
 >>> my_dict = {"a": [1, 2, 3]}
 >>> dataset = Dataset.from_dict(my_dict)
@@ -190,7 +190,7 @@ Load Python dictionaries with [`datasets.Dataset.from_dict`]:
 
 Load Pandas DataFrames with [`datasets.Dataset.from_pandas`]:
 
-```
+```py
 >>> from datasets import Dataset
 >>> import pandas as pd
 >>> df = pd.DataFrame({"a": [1, 2, 3]})
@@ -272,7 +272,7 @@ Finally, create cross-validated dataset splits by:
 
 For datasets where the requested slice boundaries do not divide evenly by 100, the default behavior is to round the boundaries to the nearest integer. As a result, some slices may contain more examples than others as shown in the following example:
 
-```
+```py
 # Assuming *train* split contains 999 records.
 # 19 records, from 500 (included) to 519 (excluded).
 >>> train_50_52_ds = datasets.load_dataset('bookcorpus', split='train[50%:52%]')
@@ -282,7 +282,7 @@ For datasets where the requested slice boundaries do not divide evenly by 100, t
 
 If you want equal sized splits, use `pct1_dropremainder` rounding instead. This will treat the specified percentage boundaries as multiples of 1%. 
 
-```
+```py
 # 18 records, from 450 (included) to 468 (excluded).
 >>> train_50_52pct1_ds = datasets.load_dataset('bookcorpus', split=datasets.ReadInstruction( 'train', from_=50, to=52, unit='%', rounding='pct1_dropremainder'))
 # 18 records, from 468 (included) to 486 (excluded).
@@ -312,7 +312,8 @@ For example, if you try to download a configuration from the [MATINF](https://hu
 Downloading and preparing dataset matinf/summarization (download: Unknown size, generated: 246.89 MiB, post-processed: Unknown size, total: 246.89 MiB) to /root/.cache/huggingface/datasets/matinf/summarization/1.0.0/82eee5e71c3ceaf20d909bca36ff237452b4e4ab195d3be7ee1c78b53e6f540e...
 AssertionError: The dataset matinf with config summarization requires manual data. 
 Please follow the manual download instructions: To use MATINF you have to download it manually. Please fill this google form (https://forms.gle/nkH4LVE4iNQeDzsc9). You will receive a download link and a password once you complete the form. Please extract all files in one folder and load the dataset with: *datasets.load_dataset('matinf', data_dir='path/to/folder/folder_name')*. 
-Manual data can be loaded with `datasets.load_dataset(matinf, data_dir='<path/to/manual/data>') ```
+Manual data can be loaded with `datasets.load_dataset(matinf, data_dir='<path/to/manual/data>') 
+```
 
 
 ### Specify features
@@ -344,7 +345,7 @@ Now when you look at your dataset features, you can see it uses the custom label
 
 When the metric you want to use is not supported by 🤗 Datasets, you can write and use your own metric script. Load your metric by providing the path to your local metric loading script:
 
-```
+```py
 >>> from datasets import load_metric
 >>> metric = load_metric('PATH/TO/MY/METRIC/SCRIPT')
 
@@ -381,7 +382,7 @@ For example, imagine you are training and evaluating on eight parallel processes
 
 3. Load your metric with [`datasets.load_metric`] with these arguments:
 
-```
+```py
 >>> from datasets import load_metric
 >>> metric = load_metric('glue', 'mrpc', num_process=num_process, process_id=rank)
 ```
@@ -394,7 +395,7 @@ Once you've loaded a metric for distributed usage, you can compute the metric as
 
 In some instances, you may be simultaneously running multiple independent distributed evaluations on the same server and files. To avoid any conflicts, it is important to provide an `experiment_id` to distinguish the separate evaluations:
 
-```
+```py
 >>> from datasets import load_metric
 >>> metric = load_metric('glue', 'mrpc', num_process=num_process, process_id=process_id, experiment_id="My_experiment_10")
 ```
