--- a/docs/source/load_hub.mdx
+++ b/docs/source/load_hub.mdx
@@ -17,8 +17,11 @@ Before you take the time to download a dataset, it is often helpful to quickly g
 {'train': SplitInfo(name='train', num_bytes=33432835, num_examples=25000, dataset_name='imdb'), 'test': SplitInfo(name='test', num_bytes=32650697, num_examples=25000, dataset_name='imdb'), 'unsupervised': SplitInfo(name='unsupervised', num_bytes=67106814, num_examples=50000, dataset_name='imdb')}
 ```
 
-seealso,None
+<Tip>
+
 Take a look at [`datasets.DatasetInfo`] for a full list of attributes you can use with `dataset_builder`.
+
+</Tip>
 
 Once you are happy with the dataset you want, load it in a single line with [`datasets.load_dataset`]:
 
