--- a/docs/source/about_dataset_load.mdx
+++ b/docs/source/about_dataset_load.mdx
@@ -10,8 +10,11 @@ For community datasets, [`datasets.load_dataset`] downloads and imports the data
 
 If you are working with a canonical dataset, [`datasets.load_dataset`] downloads and imports the dataset loading script from GitHub.
 
-seealso,None
+<Tip>
+
 Read the [Share](./share) section to learn more about the difference between community and canonical datasets. This section also provides a step-by-step guide on how to write your own dataset loading script!
+
+</Tip>
 
 The loading script downloads the dataset files from the original URL, generates the dataset and caches it in an Arrow table on your drive. If you've downloaded the dataset before, then 🤗 Datasets will reload it from the cache to save you the trouble of downloading it again.
 
